# art

./: .gitignore  CMakeLists.txt  README.md
include/art/: art.hpp
include/art/comparison/: boolean_testable.hpp
include/art/core/: different_from.hpp  like.hpp  same_as_any_of.hpp  satisfies.hpp  specialization_of.hpp
include/art/utility/: satisfies.hpp
tests/: CMakeLists.txt
tests/src/comparison/: boolean_testable.cpp
tests/src/core/: different_from.cpp  like.cpp  same_as_any_of.cpp  satisfies.cpp  specialization_of.cpp
tests/src/utility/: satisfies.cpp
